[package]
name = "sui-adapter-v2"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Adapter and accompanying CLI for local sui development"
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
leb128.workspace = true
tracing.workspace = true
serde.workspace = true

move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-bytecode-verifier-meter.workspace = true
move-core-types.workspace = true
move-vm-config.workspace = true

move-bytecode-verifier = { path = "../../../move/language/versions/v2/verifier", package = "move-bytecode-verifier-v2" }
move-vm-runtime = { path = "../../../move/language/versions/v2/vm/move-vm-runtime", package = "move-vm-runtime-v2" }
move-vm-profiler = { path = "../../../move/language/vm/move-vm-profiler" }
sui-move-natives = { path = "../sui-move-natives", package = "sui-move-natives-v2" }
sui-verifier = { path = "../sui-verifier", package = "sui-verifier-v2" }
move-vm-types = { path = "../../../move/language/versions/v2/vm/move-vm-types", package = "move-vm-types-v2" }

sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-types.workspace = true
parking_lot.workspace = true

[features]
tracing = [
    "sui-types/tracing",
    "move-vm-runtime/tracing",
    "move-vm-profiler/tracing",
    "move-vm-config/tracing",
]
